fix: images paths fix

--- a/index.html
+++ b/index.html
@@ -28,45 +28,45 @@
                 <p class="price-par">the future of housing construction</p>
                 <div class="price-check">
                     <div class="price-first-check">
-                        <img src="/images/gal.svg" alt="gal">
+                       <img src="./images/gal.svg" alt="gal">
                         <p class="first-check-par">do <span class="up-let">$10 000 </span>one-time payment</p>
                     </div>
                     <div class="price-second-check">
-                        <img src="/images/gal.svg" alt="gal">
+                        <img src="./images/gal.svg" alt="gal">
                         <span class="up-proc">30% </span><p class="second-check-par">per year</p>
                     </div>
-                    <div class="price-first-check">
-                        <img src="/images/gal.svg" alt="gal">
+                    <div c lass="price-first-check">
+                        <img src="./images/gal.svg" alt="gal">
                         <p class="first-check-par">do <span class="up-let">17% </span>per month</p>
                     </div>
                 </div>
                 <button class="price-btn">ORDER</button>
             </div>
         </div>
-        <img src="/images/house1.jpg" alt="house" class="house-img">
+        <img src="./images/house1.jpg" alt="house" class="house-img">
     </header>
     <main class="main">
-        <img src="/images/house2.jpg" alt="house" class="side-house">
+        <img src="./images/house2.jpg" alt="house" class="side-house">
         <div class="main-middle-info">
             <div class="main-first-par">
-                <img src="/images/logo.png" alt="logo" class="mid-logo">
+                <img src="./images/logo.png" alt="logo" class="mid-logo">
                 <p class="middle-par">Modern housing complexes strive to create beautiful and practical buildings.</p>
             </div>
             <div class="main-second-par">
-                <img src="/images/logo.png" alt="logo" class="mid-logo">
+                <img src="./images/logo.png" alt="logo" class="mid-logo">
                 <p class="middle-par">Developers and architects strive to minimize the impact on the environment.</p>
             </div>
             <div class="main-third-par">
-                <img src="/images/logo.png" alt="logo" class="mid-logo">
+                <img src="./images/logo.png" alt="logo" class="mid-logo">
                 <p class="middle-par">Modern homes are often designed with open spaces in mind. The concept of an "open plan" is becoming the standard.</p>
             </div>
             <div class="main-fourth-par">
-                <img src="/images/logo.png" alt="logo" class="mid-logo">
+                <img src="./images/logo.png" alt="logo" class="mid-logo">
                 <p class="middle-par">Modern houses are inextricably linked with technological innovations.</p>
             </div>
             <button class="mid-order-btn">ORDER</button>
         </div>
-        <img src="/images/couse3.jpg" alt="house" class="side-house">
+        <img src="./images/couse3.jpg" alt="house" class="side-house">
     </main>
     <div class="form-block">
         <div class="container">
@@ -84,7 +84,7 @@
                     </div>
                 </div>
                 <div class="form-imgs">
-                    <img src="/images/woman.png" alt="" class="form-woman">
+                    <img src="./images/woman.png" alt="" class="form-woman">
                 </div>
             </div>  
         </div>
@@ -105,16 +105,16 @@
                     <a href="#">
                         BUILDINGS
                     </a>
-                    <img src="/images/copy.svg" alt="">
+                    <img src="./images/copy.svg" alt="">
                 </div>
                 <div class="middle-info-footer">
                     <div class="footer-icons">
-                        <img src="/images/in.svg" alt="icon" class="footer-icon">
-                        <img src="/images/tt.svg" alt="icon" class="footer-icon">
-                        <img src="/images/in.svg" alt="icon" class="footer-icon">
-                        <img src="/images/fb.svg" alt="icon" class="footer-icon">
-                        <img src="/images/tw.svg" alt="icon" class="footer-icon">
-                        <img src="/images/yt.svg" alt="icon" class="footer-icon">
+                        <img src="./images/in.svg" alt="icon" class="footer-icon">
+                        <img src="./images/tt.svg" alt="icon" class="footer-icon">
+                        <img src="./images/in.svg" alt="icon" class="footer-icon">
+                        <img src="./images/fb.svg" alt="icon" class="footer-icon">
+                        <img src="./images/tw.svg" alt="icon" class="footer-icon">
+                        <img src="./images/yt.svg" alt="icon" class="footer-icon">
                     </div>
                     <p>Private policy</p>
                 </div>
