--- a/index.html
+++ b/index.html
@@ -1,130 +1,155 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
     <header class="header">
-        <div class="container">
-            <div class="header-title">
-                <div class="header-logo">
-                    <a href="#">
-                        BUILDINGS
-                    </a>
-                </div>
-                <nav class="nav">
-                    <ul>
-                        <li>REVIEWS</li>
-                        <li>ABOUT US</li>
-                        <li>CONTACTS</li>
-                    </ul>
-                </nav>  
-            </div>
-            <div class="main-price">
-                <h1 class="price-header">Modern houses and buildings</h1>
-                <p class="price-par">the future of housing construction</p>
-                <div class="price-check">
-                    <div class="price-first-check">
-                       <img src="./images/gal.svg" alt="gal">
-                        <p class="first-check-par">do <span class="up-let">$10 000 </span>one-time payment</p>
-                    </div>
-                    <div class="price-second-check">
-                        <img src="./images/gal.svg" alt="gal">
-                        <span class="up-proc">30% </span><p class="second-check-par">per year</p>
-                    </div>
-                    <div c lass="price-first-check">
-                        <img src="./images/gal.svg" alt="gal">
-                        <p class="first-check-par">do <span class="up-let">17% </span>per month</p>
-                    </div>
-                </div>
-                <button class="price-btn">ORDER</button>
-            </div>
+      <div class="container">
+        <div class="header-title">
+          <div class="header-logo">
+            <a href="#"> BUILDINGS </a>
+          </div>
+          <nav class="nav">
+            <ul>
+              <li>REVIEWS</li>
+              <li>ABOUT US</li>
+              <li>CONTACTS</li>
+            </ul>
+          </nav>
         </div>
-        <img src="./images/house1.jpg" alt="house" class="house-img">
+        <div class="main-price">
+          <h1 class="price-header">Modern houses and buildings</h1>
+          <p class="price-par">the future of housing construction</p>
+          <div class="price-check">
+            <div class="price-first-check">
+              <img src="./images/gal.svg" alt="gal" />
+              <p class="first-check-par">
+                do <span class="up-let">$10 000 </span>one-time payment
+              </p>
+            </div>
+            <div class="price-second-check">
+              <img src="./images/gal.svg" alt="gal" />
+              <span class="up-proc">30% </span>
+              <p class="second-check-par">per year</p>
+            </div>
+            <div c lass="price-first-check">
+              <img src="./images/gal.svg" alt="gal" />
+              <p class="first-check-par">
+                do <span class="up-let">17% </span>per month
+              </p>
+            </div>
+          </div>
+          <button class="price-btn">ORDER</button>
+        </div>
+      </div>
+      <img src="./images/house1.jpg" alt="house" class="house-img" />
     </header>
     <main class="main">
-        <img src="./images/house2.jpg" alt="house" class="side-house">
-        <div class="main-middle-info">
-            <div class="main-first-par">
-                <img src="./images/logo.png" alt="logo" class="mid-logo">
-                <p class="middle-par">Modern housing complexes strive to create beautiful and practical buildings.</p>
-            </div>
-            <div class="main-second-par">
-                <img src="./images/logo.png" alt="logo" class="mid-logo">
-                <p class="middle-par">Developers and architects strive to minimize the impact on the environment.</p>
-            </div>
-            <div class="main-third-par">
-                <img src="./images/logo.png" alt="logo" class="mid-logo">
-                <p class="middle-par">Modern homes are often designed with open spaces in mind. The concept of an "open plan" is becoming the standard.</p>
-            </div>
-            <div class="main-fourth-par">
-                <img src="./images/logo.png" alt="logo" class="mid-logo">
-                <p class="middle-par">Modern houses are inextricably linked with technological innovations.</p>
-            </div>
-            <button class="mid-order-btn">ORDER</button>
+      <img src="./images/house2.jpg" alt="house" class="side-house" />
+      <div class="main-middle-info">
+        <div class="main-first-par">
+          <img src="./images/logo.png" alt="logo" class="mid-logo" />
+          <p class="middle-par">
+            Modern housing complexes strive to create beautiful and practical
+            buildings.
+          </p>
         </div>
-        <img src="./images/couse3.jpg" alt="house" class="side-house">
+        <div class="main-second-par">
+          <img src="./images/logo.png" alt="logo" class="mid-logo" />
+          <p class="middle-par">
+            Developers and architects strive to minimize the impact on the
+            environment.
+          </p>
+        </div>
+        <div class="main-third-par">
+          <img src="./images/logo.png" alt="logo" class="mid-logo" />
+          <p class="middle-par">
+            Modern homes are often designed with open spaces in mind. The
+            concept of an "open plan" is becoming the standard.
+          </p>
+        </div>
+        <div class="main-fourth-par">
+          <img src="./images/logo.png" alt="logo" class="mid-logo" />
+          <p class="middle-par">
+            Modern houses are inextricably linked with technological
+            innovations.
+          </p>
+        </div>
+        <button class="mid-order-btn">ORDER</button>
+      </div>
+      <img src="./images/couse3.jpg" alt="house" class="side-house" />
     </main>
     <div class="form-block">
-        <div class="container">
-            <div class="form-container">
-                <div class="form">
-                    <h1 class="form-header">Fill out the application and get in line</h1>
-                    <div class="form-inputs">
-                        <input type="text" placeholder="Name" class="form-input" name="Name">
-                        <input type="mail" placeholder="E-mail" class="form-input" name="Email">
-                        <div class="checkbox-block">
-                            <input type="checkbox" name="Accept_policy">
-                            <p class="checkbox-par">I accept private police</p>
-                        </div>
-                        <button class="form-btn">SUBMIT FORM</button>
-                    </div>
-                </div>
-                <div class="form-imgs">
-                    <img src="./images/woman.png" alt="" class="form-woman">
-                </div>
-            </div>  
+      <div class="container">
+        <div class="form-container">
+          <div class="form">
+            <h1 class="form-header">
+              Fill out the application and get in line
+            </h1>
+            <div class="form-inputs">
+              <input
+                type="text"
+                placeholder="Name"
+                class="form-input"
+                name="Name"
+              />
+              <input
+                type="mail"
+                placeholder="E-mail"
+                class="form-input"
+                name="Email"
+              />
+              <div class="checkbox-block">
+                <input type="checkbox" name="Accept_policy" />
+                <p class="checkbox-par">I accept private police</p>
+              </div>
+              <button class="form-btn">SUBMIT FORM</button>
+            </div>
+          </div>
+          <div class="form-imgs">
+            <img src="./images/woman.png" alt="" class="form-woman" />
+          </div>
         </div>
+      </div>
     </div>
     <footer class="footer">
-        <div class="container">
-            <div class="main-footer">
-                <nav class="footer-nav">
-                    <ul>
-                        <li>REVIEWS</li>
-                        <li>ABOUT US</li>
-                        <li>CONTACTS</li>
-                    </ul>
-                </nav>
-            </div>
-            <div class="sub-footer">
-                <div class="footer-logo">
-                    <a href="#">
-                        BUILDINGS
-                    </a>
-                    <img src="./images/copy.svg" alt="">
-                </div>
-                <div class="middle-info-footer">
-                    <div class="footer-icons">
-                        <img src="./images/in.svg" alt="icon" class="footer-icon">
-                        <img src="./images/tt.svg" alt="icon" class="footer-icon">
-                        <img src="./images/in.svg" alt="icon" class="footer-icon">
-                        <img src="./images/fb.svg" alt="icon" class="footer-icon">
-                        <img src="./images/tw.svg" alt="icon" class="footer-icon">
-                        <img src="./images/yt.svg" alt="icon" class="footer-icon">
-                    </div>
-                    <p>Private policy</p>
-                </div>
-                <div class="terms-footer">
-                    <button class="footer-btn">ORDER</button>
-                    <p>Terms of Use</p>
-                </div>
-            </div>
+      <div class="container">
+        <div class="main-footer">
+          <nav class="footer-nav">
+            <ul>
+              <li>REVIEWS</li>
+              <li>ABOUT US</li>
+              <li>CONTACTS</li>
+            </ul>
+          </nav>
         </div>
+        <div class="sub-footer">
+          <div class="footer-logo">
+            <a href="#"> BUILDINGS </a>
+            <img src="./images/copy.svg" alt="" />
+          </div>
+          <div class="middle-info-footer">
+            <div class="footer-icons">
+              <img src="./images/in.svg" alt="icon" class="footer-icon" />
+              <img src="./images/tt.svg" alt="icon" class="footer-icon" />
+              <img src="./images/in.svg" alt="icon" class="footer-icon" />
+              <img src="./images/fb.svg" alt="icon" class="footer-icon" />
+              <img src="./images/tw.svg" alt="icon" class="footer-icon" />
+              <img src="./images/yt.svg" alt="icon" class="footer-icon" />
+            </div>
+            <p>Private policy</p>
+          </div>
+          <div class="terms-footer">
+            <button class="footer-btn">ORDER</button>
+            <p>Terms of Use</p>
+          </div>
+        </div>
+      </div>
     </footer>
-    <script src="/script.js"></script>
-</body>
+    <script src="./script.js"></script>
+  </body>
 </html>
